yaml file enabled to use API

--- a/.github/workflows/extoincd.yml
+++ b/.github/workflows/extoincd.yml
@@ -16,7 +16,7 @@ jobs:
    env:
      DIVIO_API_TOKEN: ${{ secrets.DIVIO_API_TOKEN }}
      DIVIO_PROJECT_ID: ${{ secrets.DIVIO_PROJECT_ID }}  
-     # DIVIO_PROJECT_SLUG: ${{ secrets.DIVIO_PROJECT_SLUG }}
+     DIVIO_PROJECT_SLUG: ${{ secrets.DIVIO_PROJECT_SLUG }}
   # The type of runner that this job will run on
    runs-on: ubuntu-latest
  # Steps represent a sequence of tasks that will be executed as part of the job
@@ -29,17 +29,17 @@ jobs:
      with:
        python-version: 3.8
  
-   # - name: Deploy to Divio Cloud using the API
-   #   run: |
-   #     curl -X POST --data 'stage="$DIVIO_PROJECT_SLUG"' --header "Authorization: Basic "$DIVIO_API_TOKEN"" https://control.divio.com/api/v1/website/"$DIVIO_PROJECT_ID"/deploy/
-  
-   - name: Install Divio CLI
+   - name: Deploy to Divio Cloud using the API
      run: |
-       python -m pip install --upgrade pip
-       pip install divio-cli
+       curl -X POST --data 'stage="$DIVIO_PROJECT_SLUG"' --header "Authorization: Basic "$DIVIO_API_TOKEN"" https://control.divio.com/api/v1/website/"$DIVIO_PROJECT_ID"/deploy/
   
-   # Login to Divio using the access token and deploy
-   - name: Deploy to Divio
-     run: |
-       divio login "$DIVIO_API_TOKEN"
-       divio project deploy --remote-id "$DIVIO_PROJECT_ID"
+  #  - name: Install Divio CLI
+  #    run: |
+  #      python -m pip install --upgrade pip
+  #      pip install divio-cli
+  
+  #  # Login to Divio using the access token and deploy
+  #  - name: Deploy to Divio
+  #    run: |
+  #      divio login "$DIVIO_API_TOKEN"
+  #      divio project deploy --remote-id "$DIVIO_PROJECT_ID"
