--- a/.github/workflows/extoincd.yml
+++ b/.github/workflows/extoincd.yml
@@ -17,6 +17,7 @@ jobs:
      DIVIO_API_TOKEN: ${{ secrets.DIVIO_API_TOKEN }}
      DIVIO_PROJECT_ID: ${{ secrets.DIVIO_PROJECT_ID }}  
      DIVIO_PROJECT_SLUG: ${{ secrets.DIVIO_PROJECT_SLUG }}
+     API_END_POINT: ${{ secrets.API_END_POINT }}
   # The type of runner that this job will run on
    runs-on: ubuntu-latest
  # Steps represent a sequence of tasks that will be executed as part of the job
@@ -24,11 +25,14 @@ jobs:
    # Checks-out the repository under $GITHUB_WORKSPACE, so this job can access it
    - uses: actions/checkout@v2
    # setting up Python 3.8 to be able to run pip to install Divio CLI
-   - name: Set up Python 3.8
-     uses: actions/setup-python@v1
-     with:
-       python-version: 3.8
- 
+  #  - name: Set up Python 3.8
+  #    uses: actions/setup-python@v1
+  #    with:
+  #      python-version: 3.8
+   - name: Checking the API End points
+     run: |
+       curl https://api.divio.com/apps/v3/ -H 'authorization: Token "$DIVIO_API_TOKEN"'
+
    - name: Deploy to Divio Cloud using the API
      run: |
        curl -X POST --data 'stage="$DIVIO_PROJECT_SLUG"' --header "Authorization: Basic "$DIVIO_API_TOKEN"" https://control.divio.com/api/v1/website/"$DIVIO_PROJECT_ID"/deploy/
