--- a/.github/workflows/extoincd.yml
+++ b/.github/workflows/extoincd.yml
@@ -29,15 +29,14 @@ jobs:
   #    uses: actions/setup-python@v1
   #    with:
   #      python-version: 3.8
-  # - name: Checking the API End points
-  #   run: |
-  #     curl https://api.divio.com/apps/v3/ -H authorization: Token $DIVIO_API_TOKEN
+   - name: Checking the API End points
+     run: |
+      curl https://api.divio.com/apps/v3/ -H authorization: Token $DIVIO_API_TOKEN
       
    - name: Deploy to Divio Cloud using the API
      run: |
+      curl -X POST --data 'environment=ENVIRONMENT' --header 'Authorization: Token $DIVIO_API_TOKEN' https://api.divio.com/apps/v3/deployments/
   #     curl -X POST --data 'stage=\"$DIVIO_PROJECT_SLUG\"' --header 'Authorization: Basic \"$DIVIO_API_TOKEN\"' https://control.divio.com/api/v1/website/\$DIVIO_PROJECT_ID/deploy/
-       curl -X POST --data 'environment=ENVIRONMENT' --header 'Authorization: Token $DIVIO_API_TOKEN' https://api.divio.com/apps/v3/deployments/
-  
   #  - name: Install Divio CLI
   #    run: |
   #      python -m pip install --upgrade pip
