curl command improve

--- a/.github/workflows/extoincd.yml
+++ b/.github/workflows/extoincd.yml
@@ -35,7 +35,7 @@ jobs:
       
    - name: Deploy to Divio Cloud using the API
      run: |
-      curl -X POST --data 'environment=ENVIRONMENT' --header 'Authorization: Token $DIVIO_API_TOKEN' https://api.divio.com/apps/v3/deployments/
+      curl -X POST --data 'environment=$ENVIRONMENT' --header "Authorization: Token $DIVIO_API_TOKEN" https://api.divio.com/apps/v3/deployments/
   #     curl -X POST --data 'stage=\"$DIVIO_PROJECT_SLUG\"' --header 'Authorization: Basic \"$DIVIO_API_TOKEN\"' https://control.divio.com/api/v1/website/\$DIVIO_PROJECT_ID/deploy/
   #  - name: Install Divio CLI
   #    run: |
